@@ -4,8 +4,8 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 
 import java.io.Serializable;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Data
 @AllArgsConstructor
@@ -15,22 +15,11 @@ public class UploadResultDTO implements Serializable {
     private String folderPath;
 
     //Jackson 라이브러리 책 402pg 참고
-    public String getImageURL(){
-        try{
-            return URLEncoder.encode(folderPath+"/"+uuid+"_"+fileName,"UTF-8");
-        }catch(UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
-        return "";
+    public String getImageURL() {
+        return URLEncoder.encode(folderPath + "/" + uuid + "_" + fileName, StandardCharsets.UTF_8);
     }
 
-    public String getThumbnailURL(){
-        try{
-            return URLEncoder.encode(folderPath+"/s_"+uuid+"_"+fileName,"UTF-8");
-        }catch(UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
-        return "";
+    public String getThumbnailURL() {
+        return URLEncoder.encode(folderPath + "/s_" + uuid + "_" + fileName, StandardCharsets.UTF_8);
     }
-
 }
